--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/zombie_background"
     app:layout_behavior="@string/appbar_scrolling_view_behavior">
 
     <TextView
@@ -11,18 +12,22 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="24dp"
+        android:fontFamily="@font/nosifer"
         android:text="@string/main_menu_header"
+        android:textColor="#5EBF62"
         android:textSize="40sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <Button
-        android:id="@+id/button"
+        android:id="@+id/play_game_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="116dp"
-        android:layout_marginTop="64dp"
+        android:layout_marginTop="24dp"
+        android:backgroundTint="#6051A53E"
+        android:fontFamily="@font/atma_medium"
         android:paddingLeft="50dp"
         android:paddingTop="15dp"
         android:paddingRight="50dp"
@@ -33,44 +38,50 @@
         app:layout_constraintTop_toBottomOf="@+id/textView" />
 
     <Button
-        android:id="@+id/button2"
+        android:id="@+id/options_button"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:backgroundTint="#6051A53E"
+        android:fontFamily="@font/atma_medium"
         android:paddingLeft="50dp"
         android:paddingTop="15dp"
         android:paddingRight="50dp"
         android:paddingBottom="15dp"
         android:text="@string/options_button"
         android:textSize="24sp"
-        app:layout_constraintEnd_toEndOf="@+id/button"
-        app:layout_constraintStart_toStartOf="@+id/button"
-        app:layout_constraintTop_toBottomOf="@+id/button" />
+        app:layout_constraintEnd_toEndOf="@+id/play_game_button"
+        app:layout_constraintStart_toStartOf="@+id/play_game_button"
+        app:layout_constraintTop_toBottomOf="@+id/play_game_button" />
 
     <Button
-        android:id="@+id/button3"
+        android:id="@+id/help_button"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:backgroundTint="#6051A53E"
+        android:fontFamily="@font/atma_medium"
         android:paddingLeft="50dp"
         android:paddingTop="15dp"
         android:paddingRight="50dp"
         android:paddingBottom="15dp"
         android:text="@string/help_button"
         android:textSize="24sp"
-        app:layout_constraintEnd_toEndOf="@+id/button"
-        app:layout_constraintStart_toStartOf="@+id/button2"
-        app:layout_constraintTop_toBottomOf="@+id/button2" />
+        app:layout_constraintEnd_toEndOf="@+id/play_game_button"
+        app:layout_constraintStart_toStartOf="@+id/options_button"
+        app:layout_constraintTop_toBottomOf="@+id/options_button"
+        tools:ignore="UnknownId" />
 
     <ImageView
         android:id="@+id/imageView"
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:paddingLeft="0dp"
-        android:paddingTop="50dp"
+        android:paddingTop="30dp"
         android:paddingRight="0dp"
-        android:paddingBottom="50dp"
+        android:paddingBottom="70dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/button2"
+        app:layout_constraintStart_toEndOf="@+id/options_button"
         app:layout_constraintTop_toBottomOf="@+id/textView"
-        app:srcCompat="@drawable/zombie" />
+        app:srcCompat="@drawable/zombie"
+        tools:ignore="UnknownId" />
 </androidx.constraintlayout.widget.ConstraintLayout>
