--- a/app/src/main/res/layout/dialog_game_end.xml
+++ b/app/src/main/res/layout/dialog_game_end.xml
@@ -20,11 +20,11 @@
 
     <ImageView
         android:id="@+id/ivWinningImage"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="100dp"
+        android:layout_height="100dp"
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
         android:layout_marginStart="24dp"
         android:layout_marginTop="24dp"
-        app:srcCompat="@drawable/ic_baseline_announcement_24" />
+        app:srcCompat="@drawable/medal" />
 </RelativeLayout>
