--- a/app/src/main/res/layout/activity_welcome.xml
+++ b/app/src/main/res/layout/activity_welcome.xml
@@ -4,15 +4,18 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/zombie_background"
     tools:context=".WelcomeActivity">
 
     <TextView
         android:id="@+id/tvWelcomeMessage"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:fontFamily="@font/nosifer"
         android:text="@string/welcome_activity_message"
         android:textAlignment="center"
-        android:textSize="48sp"
+        android:textColor="#5EBF62"
+        android:textSize="36sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.566"
@@ -25,6 +28,8 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="24dp"
         android:layout_marginBottom="24dp"
+        android:fontFamily="@font/nosifer"
+        android:textColor="@color/design_default_color_primary"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
 
@@ -36,8 +41,19 @@
         android:layout_marginBottom="24dp"
         android:background="@color/transparent"
         android:drawableEnd="@drawable/ic_baseline_chevron_right_24"
+        android:fontFamily="@font/nosifer"
+        android:paddingStart="4dp"
+        android:paddingEnd="4dp"
         android:text="@string/welcome_activity_skip_txt"
-        android:textColor="@color/design_default_color_primary"
+        android:textColor="@color/white"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
+
+    <ImageView
+        android:id="@+id/imgZombie"
+        android:layout_width="74dp"
+        android:layout_height="127dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/tvCounter"
+        app:srcCompat="@drawable/welcome_zombie" />
 </androidx.constraintlayout.widget.ConstraintLayout>
