--- a/app/src/main/res/values/options.xml
+++ b/app/src/main/res/values/options.xml
@@ -12,9 +12,6 @@
         <item>15</item>
     </integer-array>
 
-    <integer name="default_row">4</integer>
-    <integer name="default_col">6</integer>
-
     <integer-array name="num_mines_options">
         <item>6</item>
         <item>10</item>
@@ -22,6 +19,20 @@
         <item>20</item>
     </integer-array>
 
+
+    <integer name="default_row">4</integer>
+    <integer name="default_col">6</integer>
     <integer name="default_mines">6</integer>
 
+    <string-array name="citations">
+        <item>
+            <div>Icons made by <a href="https://www.flaticon.com/authors/vectors-market" title="Vectors Market">Vectors Market</a> from <a href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a></div>
+        </item>
+        <item>
+            <div>Icons made by <a href="https://www.freepik.com" title="Freepik">Freepik</a> from <a href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a></div>
+        </item>
+        <item>
+            <div>Icons made by <a href="https://www.flaticon.com/authors/pixelmeetup" title="Pixelmeetup">Pixelmeetup</a> from <a href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a></div>
+        </item>
+    </string-array>
 </resources>
