--- a/app/src/main/res/layout/activity_play_game.xml
+++ b/app/src/main/res/layout/activity_play_game.xml
@@ -14,7 +14,7 @@
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
         android:fontFamily="@font/nosifer"
-        android:textColor="#5EBF62"
+        android:textColor="@color/green_text"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -25,7 +25,7 @@
         android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
         android:fontFamily="@font/nosifer"
-        android:textColor="#5EBF62"
+        android:textColor="@color/green_text"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
