--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -14,7 +14,7 @@
         android:layout_marginTop="24dp"
         android:fontFamily="@font/nosifer"
         android:text="@string/main_menu_header"
-        android:textColor="#5EBF62"
+        android:textColor="@color/green_text"
         android:textSize="40sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
