--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -28,6 +28,7 @@
         android:layout_marginTop="24dp"
         android:backgroundTint="#6051A53E"
         android:fontFamily="@font/atma_medium"
+        android:hapticFeedbackEnabled="true"
         android:paddingLeft="50dp"
         android:paddingTop="15dp"
         android:paddingRight="50dp"
